# TaskPlayer

./: .gitignore  App.xaml  App.xaml.cs  Cargo.toml  MainWindow.xaml  MainWindow.xaml.cs  MediaManager.cs  README.md  Settings.cs  SettingsWindow.xaml  SettingsWindow.xaml.cs  TaskbarMiniPlayer.csproj  Win32.cs
Animations/: DropdownAnimBehavior.cs  FluidMotion.cs
Models/: ProfileManager.cs  Settings.cs  TranslucentIcoSettings.cs
Services/: ColorExtractor.cs  HotkeyManager.cs  Logger.cs  MarqueeController.cs  MediaManager.cs  TaskbarHelper.cs  TimelineBorderAnimator.cs  TranslucentIcoService.cs  VolumeController.cs  Win32.cs
Views/: DevWindow.xaml  DevWindow.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  SettingsWindow.xaml  SettingsWindow.xaml.cs  TaskbarErrorWindow.xaml  TaskbarErrorWindow.xaml.cs  TranslucentIcoWindow.xaml  TranslucentIcoWindow.xaml.cs
docs/: app.js  index.html  styles.css
src/: main.rs
