[package]
name = "taskbar-mini-player"
version = "0.1.0"
edition = "2021"

[dependencies.windows]
version = "0.61"
features = [
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
    "Win32_UI_Controls",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Foundation",
    "Media_Control",
]

[profile.release]
opt-level = "s"
lto = true
